--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <h1>
     EMPTY
   </h1>
+  <h2>Visit <a href="https://projects.do-code.com">projects</a> page for more</h2>
 </body>
 
 </html>
