--- a/index.html
+++ b/index.html
@@ -13,19 +13,27 @@
       justify-content: center;
       align-items: center;
     }
+    
     h1 {
       color: whitesmoke;
       font-size: 60px;
       text-align: center;
     }
+    div {
+      display: flex;
+      flex-direction: column;
+    }
   </style>
 </head>
 
 <body>
-  <h1>
-    EMPTY
-  </h1>
-  <h2>Visit <a href="https://projects.do-code.com">projects</a> page for more</h2>
+  <div>
+    <h1>
+      EMPTY
+    </h1>
+    <h2>Visit <a href="https://projects.do-code.com">projects</a> page for more</h2>
+    
+  </div>
 </body>
 
 </html>
