--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     div {
       display: flex;
       flex-direction: column;
+      color: white;
+      align-items: center;
     }
   </style>
 </head>
